force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/sugati__Supplier_Cost_and_Payment_Details__c.object-meta.xml
<CustomObject>
    <description>To calculate Client and Supplier Payment Due Amount and Dats</description>
    <label>Supplier Cost and Payment Details</label>
    <nameField>
        <displayFormat>SCPR-{0}</displayFormat>
        <label>Supplier Cost and Payment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Cost and Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>