force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Client_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Payment</label>
    <referenceTo>sugati__Client_Payment__c</referenceTo>
    <relationshipLabel>Supplier Cost and Payment Details</relationshipLabel>
    <relationshipName>Supplier_Cost_and_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>