force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Component__c</fullName>
    <formula>sugati__SCPR_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_RecordType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component</label>
    <type>Text</type>
</CustomField>