force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Deposit_Due_Date__c</fullName>
    <formula>sugati__SCPR_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__r.sugati__O_Departure_Date__c - sugati__SCPR_Supplier_Payment_Rule2__r.sugati__SPR_Deposit_Due_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Due Date</label>
    <type>Date</type>
</CustomField>