force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Due_Amount__c</fullName>
    <label>Due Amount (Supplier)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>