force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>sugati__Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Supplier Cost and Payment Details</relationshipLabel>
    <relationshipName>Supplier_Cost_and_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>