force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>