force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPD_Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPD_Rule_Type__c</fullName>
    <formula>if(ISBLANK(sugati__SCPR_Rule__c), sugati__SCPR_Supplier_Payment_Rule2__r.RecordType.DeveloperName,sugati__SCPR_Rule__r.RecordType.DeveloperName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Type</label>
    <type>Text</type>
</CustomField>