force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPR_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>