force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPR_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPR_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Supplier Cost and Payment Details</relationshipLabel>
    <relationshipName>Supplier_Cost_and_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>