force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPR_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPR_Supplier__c</fullName>
    <formula>sugati__SCPR_Supplier_Payment__r.sugati__SP_Supplier_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>