force-app/main/default/objects/sugati__Supplier_Cost_and_Payment_Details__c/fields/sugati__SCPR_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCPR_Supplier_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Cost</label>
    <referenceTo>sugati__Supplier_Cost__c</referenceTo>
    <relationshipLabel>Supplier Cost and Payment Details</relationshipLabel>
    <relationshipName>Supplier_Cost_and_Payment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>